<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".bon"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pembukaan"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tvname1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Nama2"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tipe_Keanggotaan"
            android:textColor="@color/black"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/tvmembertype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint=""
            android:textColor="@color/black"
            android:textAlignment="center"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Kode_barang"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvitemcode"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="Kode Item"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nama_barang"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvnamabarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Tipe Barang"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Harga"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvharga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Harga"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Total"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Diskon_harga"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvdischarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="diskon"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Diskon_keanggotaan"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvdiscmember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Diskon Anggota"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Total_semua"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tvtotalBayar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Harga"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Penutup"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bagikan"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ucapan"
        android:textColor="@color/black"
        android:textAlignment="center" />

</LinearLayout>